sumo/tests/jtrrouter/errors/network/edge/root__edge#id__false2/errors.jtrrouter
Error: At edge 'a': succeeding edge '2_0' does not exist.
Error: At edge 'a': succeeding edge '2_1' does not exist.
Error: An unknown edge occured (id='2').
Quitting (on error).
